--- a/experiments/configs/nq_baseline_gemma2b_full.yaml
+++ b/experiments/configs/nq_baseline_gemma2b_full.yaml
@@ -9,13 +9,13 @@ agent:
 model:
   type: huggingface
   model_name: "google/gemma-2-2b-it"
-  device: "cuda"
+  device: "cpu"
   load_in_8bit: true  # Use 8-bit quantization to save memory
 
 dataset:
   name: natural_questions
   split: validation
-  num_examples: 100
+  num_examples: 5000
   filter_no_answer: true  # Remove questions without explicit answers
 
 metrics:
@@ -27,6 +27,9 @@ metrics:
   - name: bleurt
     params:
       checkpoint: "BLEURT-20-D3"  # Smaller/faster checkpoint
+  - name: llm_judge_qa
+    params:
+      judgment_type: "binary"
 
 output:
   save_predictions: true
