--- a/experiments/configs/nq_baseline_gemma2b_cpu.yaml
+++ b/experiments/configs/nq_baseline_gemma2b_cpu.yaml
@@ -1,5 +1,6 @@
 # Natural Questions - Baseline (DirectLLM) with Gemma 2B - CPU Version
-# Quick test on CPU: 10 examples with fast metrics only
+# Quick test on CPU: 10 examples with basic metrics
+# ~10-15 minutes on CPU (slower than GPU)
 
 agent:
   type: direct_llm
@@ -18,22 +19,14 @@ dataset:
   num_examples: 10  # Keep small for CPU (slower)
   filter_no_answer: true
 
-# LLM Judge Model Configuration (Budget version)
-judge_model:
-  type: openai
-  model_name: "gpt-4o-mini"  # Much cheaper than gpt-4o
-  temperature: 0.0
+# Note: batch_size has minimal benefit on CPU
+evaluation:
+  batch_size: 2  # Small batch for CPU
 
 metrics:
   - exact_match
   - f1
-  - bertscore
-  - bleurt
-  - name: llm_judge_qa
-    params:
-      judgment_type: "binary"  # binary: correct/incorrect
 
 output:
   save_predictions: true
   output_path: "outputs/nq_baseline_gemma2b_cpu.json"
-
