--- a/experiments/configs/nq_baseline_with_llm_judge_mini.yaml
+++ b/experiments/configs/nq_baseline_with_llm_judge_mini.yaml
@@ -1,5 +1,6 @@
 # Natural Questions - Baseline with LLM Judge (Budget Version)
 # Uses GPT-4o-mini for lower cost (~10x cheaper than GPT-4o)
+# ~5 minutes on GPU (with batch processing)
 
 agent:
   type: direct_llm
@@ -18,6 +19,10 @@ dataset:
   num_examples: 50  # Can afford more with mini model
   filter_no_answer: true
 
+# Batch processing for faster evaluation
+evaluation:
+  batch_size: 8
+
 # LLM Judge Model Configuration (Budget version)
 judge_model:
   type: openai
@@ -30,8 +35,8 @@ metrics:
   - name: llm_judge_qa
     params:
       judgment_type: "binary"
+      batch_size: 20  # Process 20 judgments in parallel (mini model can handle more)
 
 output:
   save_predictions: true
   output_path: "outputs/nq_baseline_with_llm_judge_mini.json"
-
