--- a/experiments/configs/nq_fixed_rag_with_faithfulness.yaml
+++ b/experiments/configs/nq_fixed_rag_with_faithfulness.yaml
@@ -1,6 +1,7 @@
 # Natural Questions - Fixed RAG with Faithfulness Metrics
 # Evaluates both correctness AND groundedness (hallucination detection)
 # REQUIRES: Pre-indexed retriever artifact (run: make index-wiki-small)
+# ~30 minutes on GPU
 
 agent:
   type: fixed_rag
@@ -29,6 +30,10 @@ dataset:
   split: validation
   num_examples: 50  # 50 examples for RAG eval
   filter_no_answer: true
+
+# Batch processing for faster evaluation
+evaluation:
+  batch_size: 8
 
 metrics:
   # Correctness metrics
@@ -64,4 +69,3 @@ output:
 # - These metrics only make sense with RAG (require context)
 # - NLI method uses transformer models, slower but accurate
 # - For faster eval, use method: "simple" or "token_overlap"
-
