keeping just some baselines configs

--- a/experiments/configs/nq_baseline_gemma2b_cpu.yaml
+++ b/experiments/configs/nq_baseline_gemma2b_cpu.yaml
@@ -19,9 +19,10 @@ dataset:
   num_examples: 10  # Keep small for CPU (slower)
   filter_no_answer: true
 
-# Note: batch_size has minimal benefit on CPU
+# Evaluation settings
 evaluation:
-  batch_size: 2  # Small batch for CPU
+  mode: both      # generate (predictions only), evaluate (metrics only), or both
+  batch_size: 2   # Small batch for CPU
 
 metrics:
   - exact_match
