--- a/experiments/configs/nq_baseline_gemma2b_full.yaml
+++ b/experiments/configs/nq_baseline_gemma2b_full.yaml
@@ -19,15 +19,10 @@ dataset:
   num_examples: 100
   filter_no_answer: true
 
-# Batch processing for faster evaluation
+# Evaluation settings
 evaluation:
-  batch_size: 8  # Process 8 questions at once
-
-# LLM Judge Model Configuration
-judge_model:
-  type: openai
-  model_name: "gpt-4o-mini"  # Budget-friendly option
-  temperature: 0.0
+  mode: both      # generate (predictions only), evaluate (metrics only), or both
+  batch_size: 8   # Process 8 questions at once
 
 metrics:
   - exact_match
@@ -38,10 +33,6 @@ metrics:
   - name: bleurt
     params:
       checkpoint: "BLEURT-20-D3"
-  - name: llm_judge_qa
-    params:
-      judgment_type: "binary"
-      batch_size: 16  # Process 16 judgments in parallel for speed
 
 output:
   save_predictions: true
