chore: making better configs and cleaning up some mds

--- a/experiments/configs/example_both.yaml
+++ b/experiments/configs/example_both.yaml
@@ -33,7 +33,10 @@ metrics:
   - f1
   - bertscore
   - bleurt
-  # - llm_judge_qa  # Uncomment if judge_model is configured
+  - name: llm_judge_qa  # LLM-as-a-judge evaluation
+    params:
+      judgment_type: "binary"  # "binary" or "ternary"
+      batch_size: 16           # Batch for speed
 
 output:
   save_predictions: true
