--- a/experiments/configs/example_both.yaml
+++ b/experiments/configs/example_both.yaml
@@ -22,6 +22,9 @@ dataset:
 evaluation:
   mode: both      # Generate predictions, then compute metrics
   batch_size: 8   # Process 8 questions at once for speed
+  checkpoint_every: 20        # Save checkpoint every 20 questions
+  resume_from_checkpoint: true  # Resume from checkpoint if exists
+  retry_failures: true        # Retry failed questions on resume
 
 # Optional: Judge model for LLM-based metrics
 judge_model:
