--- a/experiments/configs/nq_baseline_gemma2b_quick.yaml
+++ b/experiments/configs/nq_baseline_gemma2b_quick.yaml
@@ -23,6 +23,9 @@ dataset:
 evaluation:
   mode: both      # generate (predictions only), evaluate (metrics only), or both
   batch_size: 4   # Process 4 questions at once
+  checkpoint_every: 5         # Save checkpoint every 5 questions (quick test)
+  resume_from_checkpoint: true  # Resume from checkpoint if exists
+  retry_failures: true        # Retry failed questions on resume
 
 # Metrics for evaluation
 metrics:
