--- a/experiments/configs/nq_fixed_rag_phi3.yaml
+++ b/experiments/configs/nq_fixed_rag_phi3.yaml
@@ -34,6 +34,9 @@ dataset:
 evaluation:
   mode: both
   batch_size: 4               # Phi-3 is small enough to batch
+  checkpoint_every: 20        # Save checkpoint every 20 questions
+  resume_from_checkpoint: true  # Resume from checkpoint if exists
+  retry_failures: true        # Retry failed questions on resume
 
 metrics:
   - exact_match
