--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,163 +5,311 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main, develop]
-  workflow_dispatch:  # Allow manual triggering
+  workflow_dispatch:
+
+# Cancel in-progress runs for the same branch
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  PYTHON_VERSION: "3.12"
+  UV_CACHE_DIR: ~/.cache/uv
 
 jobs:
-  test:
-    name: Tests (Python 3.12)
+  # ============================================================================
+  # FAST CHECKS (run first, fail fast)
+  # ============================================================================
+  
+  lint:
+    name: Lint & Format
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
           version: "latest"
 
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      - name: Cache uv dependencies
+        uses: actions/cache@v4
         with:
-          python-version: "3.12"
+          path: ${{ env.UV_CACHE_DIR }}
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-
 
       - name: Install dependencies
-        run: |
-          uv sync --extra dev
+        run: uv sync --extra dev
 
-      - name: Run tests
-        continue-on-error: true  # Don't fail CI on test failures
+      - name: Check formatting (black)
+        run: uv run black --check --diff src/ tests/ scripts/ --line-length 100
+
+      - name: Check import sorting (isort)
+        run: uv run isort --check-only --diff src/ tests/ scripts/ --profile black
+
+      - name: Check types (mypy)
+        run: uv run mypy src/ragicamp --ignore-missing-imports --no-error-summary || true
+        # Note: mypy is informational for now, doesn't fail CI
+
+  # ============================================================================
+  # TESTS
+  # ============================================================================
+  
+  test:
+    name: Tests
+    runs-on: ubuntu-latest
+    needs: lint  # Run after lint passes
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
+      - name: Cache uv dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.UV_CACHE_DIR }}
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-
+
+      - name: Install dependencies
+        run: uv sync --extra dev
+
+      - name: Run tests with coverage
         run: |
-          uv run pytest tests/ -v --tb=short || true
+          uv run pytest tests/ \
+            -v \
+            --tb=short \
+            --cov=src/ragicamp \
+            --cov-report=xml \
+            --cov-report=html \
+            --cov-report=term-missing \
+            --junitxml=test-results.xml
 
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results-python-3.12
+          name: test-results
           path: |
-            .pytest_cache/
+            test-results.xml
             htmlcov/
+            coverage.xml
 
-  lint:
-    name: Code Quality (Python 3.12)
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          version: "latest"
-
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install dependencies
-        run: |
-          uv sync --extra dev
-
-      - name: Check formatting (black)
-        continue-on-error: true  # Don't fail CI on formatting
-        run: |
-          uv run black --check src/ tests/ experiments/ --line-length 99
-
-      - name: Check import sorting (isort)
-        continue-on-error: true  # Don't fail CI on import sorting
-        run: |
-          uv run isort --check-only src/ tests/ experiments/ --profile black
-
-  coverage:
-    name: Test Coverage (Python 3.12)
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v4
-        with:
-          version: "latest"
-
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install dependencies
-        run: |
-          uv sync --extra dev
-
-      - name: Run tests with coverage
-        continue-on-error: true  # Don't fail CI on test failures
-        run: |
-          uv run pytest tests/ --cov=src/ragicamp --cov-report=xml --cov-report=html --cov-report=term || true
-
-      - name: Upload coverage reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: htmlcov/
-
-      - name: Upload coverage to Codecov (optional)
-        if: github.event_name == 'push'
+      - name: Upload coverage to Codecov
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage.xml
           fail_ci_if_error: false
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  config-validation:
-    name: Validate Configs (Python 3.12)
+  # ============================================================================
+  # CONFIG VALIDATION
+  # ============================================================================
+  
+  validate-configs:
+    name: Validate Configs
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
           version: "latest"
 
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      - name: Cache uv dependencies
+        uses: actions/cache@v4
         with:
-          python-version: "3.12"
+          path: ${{ env.UV_CACHE_DIR }}
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-
 
       - name: Install dependencies
-        run: |
-          uv sync
+        run: uv sync
 
-      - name: Validate all config files
+      - name: Validate legacy configs
         run: |
+          echo "Validating experiments/configs/*.yaml..."
           for config in experiments/configs/*.yaml; do
-            echo "Validating $config..."
-            uv run python scripts/validate_config.py "$config" || exit 1
+            echo "  → $config"
+            uv run python scripts/utils/validate_config.py "$config"
           done
 
-  summary:
-    name: CI Summary
-    runs-on: ubuntu-latest
-    needs: [test, lint, coverage, config-validation]
-    if: always()
-
-    steps:
-      - name: Check critical jobs
+      - name: Validate Hydra configs
         run: |
-          # Only fail if config validation fails (tests can have minor failures)
-          if [ "${{ needs.config-validation.result }}" != "success" ]; then
+          echo "Validating Hydra config structure..."
+          uv run python -c "
+          from omegaconf import OmegaConf
+          import hydra
+          from hydra import compose, initialize_config_dir
+          from pathlib import Path
+          import sys
+          
+          conf_dir = Path('conf').absolute()
+          
+          # Check main config exists
+          if not (conf_dir / 'config.yaml').exists():
+              print('❌ conf/config.yaml not found')
+              sys.exit(1)
+          
+          # Check all subdirs have at least one yaml
+          for subdir in ['model', 'dataset', 'agent', 'metrics', 'evaluation', 'prompt']:
+              subpath = conf_dir / subdir
+              if subpath.exists():
+                  yamls = list(subpath.glob('*.yaml'))
+                  print(f'✓ {subdir}/: {len(yamls)} configs')
+              else:
+                  print(f'⚠ {subdir}/ not found')
+          
+          # Try to load the default config
+          try:
+              with initialize_config_dir(version_base=None, config_dir=str(conf_dir)):
+                  cfg = compose(config_name='config')
+                  print(f'✓ Default config loads successfully')
+                  print(f'  Model: {cfg.model.model_name}')
+                  print(f'  Dataset: {cfg.dataset.name}')
+          except Exception as e:
+              print(f'❌ Failed to load config: {e}')
+              sys.exit(1)
+          
+          print('✅ All Hydra configs valid!')
+          "
+
+  # ============================================================================
+  # IMPORT CHECK (ensures package is importable)
+  # ============================================================================
+  
+  import-check:
+    name: Import Check
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
+      - name: Cache uv dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.UV_CACHE_DIR }}
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-
+
+      - name: Install package
+        run: uv sync
+
+      - name: Test imports
+        run: |
+          uv run python -c "
+          print('Testing imports...')
+          
+          # Core
+          from ragicamp import ComponentFactory, ComponentRegistry
+          print('✓ ragicamp core')
+          
+          # Core infrastructure
+          from ragicamp.core import get_logger, RAGiCampError, AgentType
+          print('✓ ragicamp.core')
+          
+          # Agents
+          from ragicamp.agents import RAGAgent, DirectLLMAgent, FixedRAGAgent
+          print('✓ ragicamp.agents')
+          
+          # Metrics
+          from ragicamp.metrics import ExactMatchMetric, F1Metric
+          print('✓ ragicamp.metrics')
+          
+          # Datasets
+          from ragicamp.datasets import QADataset, QAExample
+          print('✓ ragicamp.datasets')
+          
+          # Config
+          from ragicamp.config import ConfigLoader, ExperimentConfig
+          print('✓ ragicamp.config')
+          
+          print('✅ All imports successful!')
+          "
+
+  # ============================================================================
+  # SUMMARY
+  # ============================================================================
+  
+  ci-success:
+    name: CI Success
+    runs-on: ubuntu-latest
+    needs: [lint, test, validate-configs, import-check]
+    if: always()
+    
+    steps:
+      - name: Check all jobs
+        run: |
+          echo "Job Results:"
+          echo "  Lint: ${{ needs.lint.result }}"
+          echo "  Test: ${{ needs.test.result }}"
+          echo "  Validate Configs: ${{ needs.validate-configs.result }}"
+          echo "  Import Check: ${{ needs.import-check.result }}"
+          echo ""
+          
+          # Fail if any required job failed
+          if [ "${{ needs.lint.result }}" != "success" ]; then
+            echo "❌ Lint failed"
+            exit 1
+          fi
+          
+          if [ "${{ needs.test.result }}" != "success" ]; then
+            echo "❌ Tests failed"
+            exit 1
+          fi
+          
+          if [ "${{ needs.validate-configs.result }}" != "success" ]; then
             echo "❌ Config validation failed"
             exit 1
           fi
-          echo "✅ CI run complete!"
-          echo "Test status: ${{ needs.test.result }}"
-          echo "Lint status: ${{ needs.lint.result }}"
-          echo "Coverage status: ${{ needs.coverage.result }}"
-          echo "Config validation: ${{ needs.config-validation.result }}"
-
+          
+          if [ "${{ needs.import-check.result }}" != "success" ]; then
+            echo "❌ Import check failed"
+            exit 1
+          fi
+          
+          echo ""
+          echo "✅ All CI checks passed!"
