--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ dependencies = [
     "mlflow>=2.8.0",  # Experiment tracking and model registry
     "ragas>=0.1.0",  # RAG-specific evaluation metrics
     "optuna>=3.0.0",  # Hyperparameter optimization
+    # Configuration management
+    "hydra-core>=1.3.0",  # Composable config system
+    "omegaconf>=2.3.0",  # Config management for Hydra
 ]
 
 [project.optional-dependencies]
