--- a/conf/experiment/baseline_study_rag.yaml
+++ b/conf/experiment/baseline_study_rag.yaml
@@ -17,15 +17,15 @@
 #     agent.top_k=1,3,5,10
 
 defaults:
-  - /model: gemma_2b_4bit
-  - /dataset: nq
-  - /agent: fixed_rag
-  - /retriever: dense
-  - /metrics: rag
-  - /evaluation: standard
-  - /prompt: concise
-  - /judge: gpt4_mini
-  - /mlflow: default
+  - override /model: gemma_2b_4bit
+  - override /dataset: nq
+  - override /agent: fixed_rag
+  - override /retriever: dense
+  - override /metrics: rag_baseline
+  - override /evaluation: standard
+  - override /prompt: concise
+  - override /judge: gpt4_mini
+  - override /mlflow: default
 
 # Apply prompt to agent
 agent:
