--- a/conf/experiment/model_comparison.yaml
+++ b/conf/experiment/model_comparison.yaml
@@ -3,13 +3,13 @@
 # Usage: python -m ragicamp.cli.run --multirun experiment=model_comparison model=gemma_2b,phi3,llama3_8b
 
 defaults:
-  - /model: gemma_2b_4bit
-  - /dataset: nq
-  - /agent: direct_llm
-  - /metrics: standard
-  - /evaluation: standard
-  - /judge: gpt4_mini
-  - /mlflow: default
+  - override /model: gemma_2b_4bit
+  - override /dataset: nq
+  - override /agent: direct_llm
+  - override /metrics: standard
+  - override /evaluation: standard
+  - override /judge: gpt4_mini
+  - override /mlflow: default
 
 # Experiment metadata
 experiment:
