--- a/conf/judge/gpt4.yaml
+++ b/conf/judge/gpt4.yaml
@@ -1,7 +1,8 @@
-# GPT-4o Judge
-# High-quality LLM judge
+# GPT-4.1 Judge
+# High-quality LLM judge (more accurate, slower)
 # Requires OPENAI_API_KEY
 
 type: openai
-model_name: "gpt-4o"
+model_name: "gpt-4.1"
 temperature: 0.0
+max_workers: 20
