feat: comprehensive index builder with corpus/embedding/chunk variations
- Renamed indexes to {corpus}_{embedding}_{chunk_size} format
- Added support for multiple corpora (wiki_simple, wiki_en)
- Added chunk size variations (512, 1024)
- Presets: --minimal (1), --standard (2), --extended (6), --all (full matrix)
- Auto-generates Hydra retriever configs after building

--- a/conf/experiment/comprehensive_rag.yaml
+++ b/conf/experiment/comprehensive_rag.yaml
@@ -18,7 +18,7 @@ defaults:
   - override /model: gemma_2b_4bit
   - override /dataset: nq
   - override /agent: fixed_rag
-  - override /retriever: wiki_minilm_recursive
+  - override /retriever: simple_minilm_512
   - override /metrics: study_core
   - override /evaluation: study_100
   - override /prompt: rag_concise
