--- a/conf/study/simple.yaml
+++ b/conf/study/simple.yaml
@@ -1,38 +1,54 @@
-# Simple Study - Quick dev/validation
+# Simple Study - Development validation with full metric coverage
 # Run: make run-baseline-simple
 
 name: simple
-description: "Quick baseline for development (10 questions, minimal variations)"
+description: "Dev baseline with all metrics and prompt variations (10 questions)"
 
 # Limit questions for speed
 num_questions: 10
 
-# Dataset to test
+# All datasets
 datasets:
   - nq
+  - triviaqa
+  - hotpotqa
 
 # DirectLLM experiments
 direct:
   enabled: true
   models:
     - openai:gpt-4o-mini
+    - hf:google/gemma-2b-it
   prompts:
     - default
+    - concise
+    - detailed
 
 # RAG experiments  
 rag:
   enabled: true
   models:
     - openai:gpt-4o-mini
+    - hf:google/gemma-2b-it
   retrievers:
     - simple_minilm_recursive_512
   top_k_values:
     - 5
+  prompts:
+    - default
 
-# Metrics to compute (fast ones for dev)
+# All metrics
 metrics:
   - f1
   - exact_match
+  - bertscore
+  - bleurt
+  - llm_judge
+
+# LLM Judge config
+llm_judge:
+  model: openai:gpt-4o-mini
+  type: binary
 
 # Output
 output_dir: outputs/simple
