--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -6,44 +6,7 @@ on:
 
 jobs:
   # ============================================================================
-  # PR SIZE CHECK
-  # ============================================================================
-  
-  pr-size:
-    name: PR Size
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Check PR size
-        run: |
-          # Get changed files
-          CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | wc -l)
-          ADDED=$(git diff --stat origin/${{ github.base_ref }}...HEAD | tail -1 | awk '{print $4}')
-          DELETED=$(git diff --stat origin/${{ github.base_ref }}...HEAD | tail -1 | awk '{print $6}')
-          
-          echo "📊 PR Statistics:"
-          echo "  Files changed: $CHANGED"
-          echo "  Lines added: $ADDED"
-          echo "  Lines deleted: $DELETED"
-          
-          # Warn if PR is too large
-          if [ "$CHANGED" -gt 50 ]; then
-            echo ""
-            echo "⚠️  Large PR detected! Consider breaking into smaller PRs."
-          fi
-          
-          if [ "$ADDED" -gt 1000 ]; then
-            echo ""
-            echo "⚠️  Many lines added. Make sure this is intentional."
-          fi
-
-  # ============================================================================
-  # CHANGE DETECTION
+  # CHANGE DETECTION (runs first to enable conditional jobs)
   # ============================================================================
   
   changes:
@@ -54,6 +17,7 @@ jobs:
       tests: ${{ steps.changes.outputs.tests }}
       configs: ${{ steps.changes.outputs.configs }}
       docs: ${{ steps.changes.outputs.docs }}
+      deps: ${{ steps.changes.outputs.deps }}
     
     steps:
       - name: Checkout
@@ -74,16 +38,51 @@ jobs:
             docs:
               - 'docs/**'
               - '*.md'
+            deps:
+              - 'pyproject.toml'
+              - 'uv.lock'
 
   # ============================================================================
-  # QUICK SMOKE TEST (only if src changed)
+  # PR SIZE CHECK
+  # ============================================================================
+  
+  pr-size:
+    name: PR Size
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check PR size
+        run: |
+          # Get changed files
+          CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | wc -l)
+          ADDED=$(git diff --stat origin/${{ github.base_ref }}...HEAD | tail -1 | awk '{print $4}' || echo "0")
+          DELETED=$(git diff --stat origin/${{ github.base_ref }}...HEAD | tail -1 | awk '{print $6}' || echo "0")
+          
+          echo "📊 PR Statistics:"
+          echo "  Files changed: $CHANGED"
+          echo "  Lines added: ${ADDED:-0}"
+          echo "  Lines deleted: ${DELETED:-0}"
+          
+          # Warn if PR is too large
+          if [ "$CHANGED" -gt 50 ]; then
+            echo ""
+            echo "⚠️  Large PR detected! Consider breaking into smaller PRs."
+          fi
+
+  # ============================================================================
+  # QUICK SMOKE TEST (only if src or deps changed)
   # ============================================================================
   
   smoke-test:
     name: Smoke Test
     runs-on: ubuntu-latest
     needs: changes
-    if: needs.changes.outputs.src == 'true'
+    if: needs.changes.outputs.src == 'true' || needs.changes.outputs.deps == 'true'
     
     steps:
       - name: Checkout
@@ -96,6 +95,10 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Install package
         run: uv sync
@@ -135,3 +138,45 @@ jobs:
           find docs/ -type f -size +500k 2>/dev/null && \
             echo "⚠️  Large documentation files found" || \
             echo "✓ No large doc files"
+
+  # ============================================================================
+  # QUICK CONFIG CHECK (only if configs changed)
+  # ============================================================================
+  
+  config-check:
+    name: Config Check
+    runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.configs == 'true'
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Install package
+        run: uv sync
+
+      - name: Validate changed configs
+        run: |
+          echo "Validating Hydra config..."
+          uv run python -c "
+          from hydra import compose, initialize_config_dir
+          from pathlib import Path
+          
+          conf_dir = Path('conf').absolute()
+          with initialize_config_dir(version_base=None, config_dir=str(conf_dir)):
+              cfg = compose(config_name='config')
+              print('✅ Hydra config valid')
+          "
