--- a/conf/prompts/fewshot_examples.yaml
+++ b/conf/prompts/fewshot_examples.yaml
@@ -10,6 +10,7 @@ nq:
   description: "Real Google search queries with Wikipedia answers"
   style: "Give ONLY the answer - a single entity, date, or number. Do NOT add extra questions or explanations."
   stop_instruction: "IMPORTANT: Give only ONE short answer. Stop immediately after answering. Do NOT generate additional questions."
+  knowledge_instruction: "Use the context if helpful, but you may also use your own knowledge to answer correctly."
   examples:
     - question: "who got the first nobel prize in physics"
       answer: "Wilhelm Conrad Röntgen"
@@ -29,6 +30,7 @@ triviaqa:
   description: "Trivia questions from quiz leagues and trivia websites"
   style: "Give ONLY the answer - the exact entity, name, or term. No explanations."
   stop_instruction: "IMPORTANT: Give only ONE short answer. Stop immediately after answering. Do NOT generate additional questions."
+  knowledge_instruction: "Use the context if helpful, but you may also use your own knowledge to answer correctly."
   examples:
     - question: "Who was the first American in space?"
       answer: "Alan Shepard"
@@ -48,6 +50,7 @@ hotpotqa:
   description: "Questions requiring reasoning over multiple facts"
   style: "Give ONLY the final answer - a name, date, yes/no, or short phrase. No reasoning steps."
   stop_instruction: "IMPORTANT: Give only ONE short answer. Stop immediately after answering. Do NOT generate additional questions."
+  knowledge_instruction: "Use the context if helpful, but you may also use your own knowledge to answer correctly."
   examples:
     - question: "What government position was held by the woman who portrayed Nadia in the film The Survey?"
       answer: "Deputy Prime Minister of Israel"
