--- a/conf/study/comprehensive_baseline.yaml
+++ b/conf/study/comprehensive_baseline.yaml
@@ -54,9 +54,15 @@ direct:
     - hf:meta-llama/Llama-3.2-3B-Instruct  # 3B Llama, good instruction following
     - hf:mistralai/Mistral-7B-Instruct-v0.3  # 7B, excellent quality
     
-    # Large models (optional, need 24GB+ VRAM)
-    # - hf:meta-llama/Llama-3.1-8B-Instruct  # 8B, very strong
-    # - hf:Qwen/Qwen2.5-7B-Instruct          # 7B, multilingual
+    # Large/capable models (quantized for reasonable VRAM) - RECOMMENDED
+    - hf:meta-llama/Llama-3.1-8B-Instruct   # 8B, very strong (needs 4bit)
+    - hf:Qwen/Qwen2.5-7B-Instruct           # 7B, excellent multilingual
+    - hf:google/gemma-2-9b-it               # 9B Gemma 2, excellent quality
+    
+    # Very capable models (need 4bit quantization) - optional
+    # - hf:meta-llama/Meta-Llama-3.1-70B-Instruct  # 70B, SOTA quality (needs 4bit, ~35GB)
+    # - hf:Qwen/Qwen2.5-32B-Instruct               # 32B, very strong (needs 4bit, ~20GB)
+    # - hf:mistralai/Mixtral-8x7B-Instruct-v0.1    # MoE, excellent (needs 4bit, ~25GB)
     
   prompts:
     - default    # Standard QA prompt
@@ -65,9 +71,9 @@ direct:
     #- fewshot_3  # 3 dataset-specific examples
   
   # Quantization options for HF models (OpenAI is unaffected)
+  # NOTE: Removed 'none' (full precision) to avoid OOM on 16GB GPUs
   quantization:
-    - 4bit       # 4-bit quantization (faster, less VRAM)
-    - none       # Full precision (slower, more VRAM, potentially better quality)
+    - 8bit       # 4-bit quantization (faster, less VRAM)
 
 # ============================================================================
 # RAG Experiments (with retrieval)
@@ -78,7 +84,10 @@ rag:
   # Models for RAG (keep this smaller - focus on best models)
   models:
     #- openai:gpt-4o-mini   # Good balance of quality/cost
-    - hf:google/gemma-2b-it  # Representative local model
+    - hf:google/gemma-2b-it    # Small baseline
+    - hf:Qwen/Qwen2.5-7B-Instruct  # Strong 7B model (with 4bit)
+    - hf:google/gemma-2-9b-it      # 9B Gemma 2 (with 4bit)
+    - hf:meta-llama/Llama-3.1-8B-Instruct  # 8B Llama (with 4bit)
   
   # Retriever variations (6 indexes on Simple Wikipedia)
   # Format: {corpus}_{embedding}_{strategy}_{chunk_size}
@@ -107,9 +116,9 @@ rag:
     - fewshot    # 5 dataset-specific examples
   
   # Quantization for RAG (only affects HF models)
+  # NOTE: Removed 'none' (full precision) to avoid OOM on 16GB GPUs
   quantization:
-    - 4bit       # 4-bit quantization
-    - none       # Full precision
+    - 8bit       # 4-bit quantization
 
 # ============================================================================
 # Metrics
@@ -138,11 +147,24 @@ output_dir: outputs/comprehensive_baseline
 # ============================================================================
 # Execution options
 # ============================================================================
+
+# Default batch size for small models
+batch_size: 16
+
+# Per-model batch sizes (for larger models that need less batching)
+# Pattern matching: if pattern is found in model spec, use that batch size
+model_batch_sizes:
+  # Large models - use smaller batches to avoid OOM
+  "Llama-3.1-8B": 4
+  "Qwen2.5-7B": 4
+  "gemma-2-9b": 4
+  "Mistral-7B": 8
+  # Medium models
+  "Llama-3.2-3B": 8
+  "phi-3-mini": 8
+  # Small models can use default batch_size: 8
+
 options:
-  # Batch size for HF models (not yet implemented in runner - TODO)
-  # Keep low for non-quantized models which use more VRAM
-  batch_size: 8
-  
   # Save predictions after each experiment (for recovery)
   save_intermediate: true
   
@@ -150,8 +172,5 @@ options:
   skip_existing: true
   
   # GPU memory optimization for HF models
-  quantization: 4bit  # 4bit, 8bit, or none
-
-# Note: To actually use batch inference, run_study.py needs to be updated
-# to use model.batch_generate() instead of processing one question at a time.
+  quantization: 8bit  # 4bit, 8bit, or none
 
