--- a/conf/study/comprehensive_baseline.yaml
+++ b/conf/study/comprehensive_baseline.yaml
@@ -108,7 +108,7 @@ rag:
   top_k_values:
     - 3    # Minimal context
     - 5    # Balanced
-    #- 10   # Rich context
+    - 10   # Rich context
   
   # RAG-specific prompts
   prompts:
@@ -150,19 +150,19 @@ output_dir: outputs/comprehensive_baseline
 # ============================================================================
 
 # Default batch size for small models
-batch_size: 16
+batch_size: 32
 
 # Per-model batch sizes (for larger models that need less batching)
 # Pattern matching: if pattern is found in model spec, use that batch size
 model_batch_sizes:
   # Large models - use smaller batches to avoid OOM
-  "Llama-3.1-8B": 4
-  "Qwen2.5-7B": 4
-  "gemma-2-9b": 4
-  "Mistral-7B": 8
+  "Llama-3.1-8B": 8
+  "Qwen2.5-7B": 8
+  "gemma-2-9b": 8
+  "Mistral-7B": 16
   # Medium models
-  "Llama-3.2-3B": 8
-  "phi-3-mini": 8
+  "Llama-3.2-3B": 16
+  "phi-3-mini": 16
   # Small models can use default batch_size: 8
 
 options:
