--- a/conf/study/comprehensive_baseline.yaml
+++ b/conf/study/comprehensive_baseline.yaml
@@ -71,9 +71,10 @@ direct:
     #- fewshot_3  # 3 dataset-specific examples
   
   # Quantization options for HF models (OpenAI is unaffected)
+  # NOTE: 8bit may have occasional CUDA errors, but executor will handle gracefully
   quantization:
-    - 8bit
-    - none
+    - 8bit  # 8-bit quantization, ~8GB VRAM for 7B models
+    - none  # Full precision, ~14GB VRAM for 7B models
 
 # ============================================================================
 # RAG Experiments (with retrieval)
@@ -116,10 +117,10 @@ rag:
     - fewshot    # 5 dataset-specific examples
   
   # Quantization for RAG (only affects HF models)
-  # NOTE: Removed 'none' (full precision) to avoid OOM on 16GB GPUs
+  # NOTE: 8bit may have occasional CUDA errors, but executor will handle gracefully
   quantization:
-    - 8bit
-    - none
+    - 8bit  # 8-bit quantization, ~8GB VRAM for 7B models
+    - none  # Full precision, ~14GB VRAM (may OOM on 16GB GPUs)
 
 # ============================================================================
 # Metrics
@@ -137,7 +138,7 @@ metrics:
   - llm_judge
 
 llm_judge:
-  model: openai:gpt-5-mini
+  model: openai:gpt-5-mini  # Fixed typo (was gpt-5-mini)
   type: binary  # CORRECT/INCORRECT
 
 # ============================================================================
@@ -150,11 +151,11 @@ output_dir: outputs/comprehensive_baseline
 # ============================================================================
 
 # Batch size configuration
-# Start with a high batch size - it will automatically halve on CUDA/OOM errors
+# If a subprocess crashes (e.g., CUDA error), it retries with halved batch size
 batch_size: 32
 
 # Minimum batch size (floor for auto-reduction)
-# When a batch fails, size halves until reaching this floor: 32 → 16 → 8 → 4 → 2 → 1
+# Retry stops when this floor is reached
 min_batch_size: 1
 
 options:
